--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./index.css">
     <title>Document</title>
 
 </head>
 
 <body>
-
-
-
-
     <div>
         <h1 class="title">Daily Expense Tracker</h1>
-        <h1>Enter Today's Expenses</h1>
-        <input type='number' id="input" onkeyup="press(event)"></input>
-        <button onclick="clicked()">GO</button>
+        <h1 class="b_title">Enter Today's Expenses</h1><br>
+        <input type='number' id="input" onkeyup="press(event)" ></input>
+        <div class="btn">
+            <button onclick="clicked()">GO</button>
+        </div>
+        
         <div id="set">
-
+            <!-- Elements here -->
         </div>
     </div>
     <script src="./app.js"></script>
