--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <!-- Elements here -->
         </div>
     </div>
-    <script src="./app.js"></script>
 </body>
-
+<script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
+<script src="./app.js"></script>
 </html>
