--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div id="set">
             <!-- Elements here -->
         </div>
+        <div id="chartDiv" style="width:80%; height:300px; margin:40px auto;"></div>
     </div>
 </body>
 <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
